--- a/MyShelfie/src/GUI/LoginScene.fxml
+++ b/MyShelfie/src/GUI/LoginScene.fxml
@@ -8,18 +8,35 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="AnchorePane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="LogInAnchorePane" prefHeight="585.0" prefWidth="837.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
    <children>
-      <Label fx:id="TopLabel" layoutX="198.0" layoutY="43.0" text="Insert your username">
+      <Label fx:id="MyLabel" layoutX="280.0" layoutY="44.0" text="Insert your username" textFill="#eeeaea">
          <font>
-            <Font size="22.0" />
+            <Font size="30.0" />
          </font>
       </Label>
-      <Button fx:id="LoginButton" layoutX="268.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchtoConnectionTypeScene" text="Login">
+      <Button fx:id="myButton" layoutX="384.0" layoutY="455.0" mnemonicParsing="false" onAction="#switchtoConnectionTypeScene" text="Start">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <TextField fx:id="usernameText" layoutX="214.0" layoutY="151.0" promptText="username" />
+      <TextField fx:id="usernameText" layoutX="326.0" layoutY="113.0" promptText="nickname" />
+      <Label id="ConnectionLabel" layoutX="292.0" layoutY="226.0" text="Connection Protocol" textFill="#f8f3f3">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <RadioButton fx:id="RMIButton" layoutX="100.0" layoutY="336.0" mnemonicParsing="false" text="RMI" textFill="#f8f0f0">
+         <toggleGroup>
+            <ToggleGroup fx:id="ConnectionType" />
+         </toggleGroup>
+         <font>
+            <Font size="25.0" />
+         </font>
+      </RadioButton>
+      <RadioButton fx:id="SOCKETButton" layoutX="100.0" layoutY="410.0" mnemonicParsing="false" text="SOCKET" textFill="#f5f0f0" toggleGroup="$ConnectionType">
+         <font>
+            <Font size="25.0" />
+         </font></RadioButton>
    </children>
 </AnchorPane>
