--- a/MyShelfie/src/GUI/Application.css
+++ b/MyShelfie/src/GUI/Application.css
@@ -1,12 +1,12 @@
 #GameAnchor{
-    -fx-background-image: url('../../Resources/misc/sfondo_parquet.jpg');
+    -fx-background-image: url("../../../MyShelfie/Resources/misc/sfondo_parquet.jpg");
     -fx-background-size:cover ;
 }
-#LogInAnchorePane{
-    -fx-background-image: url('../../Resources/Publisher_material/Display_1.jpg');
+#LoginAnchorPane{
+    -fx-background-image: url("../../../MyShelfie/Resources/Publisher_material/Display_1.jpg");
     -fx-background-size:cover ;
 }
 #MatchTypePane{
-    -fx-background-image: url('../../Resources/Publisher_material/Display_2.jpg');
+    -fx-background-image: url("../../../MyShelfie/Resources/Publisher_material/Display_2.jpg");
     -fx-background-size:cover ;
 }
