--- a/MyShelfie/src/GUI/LoginScene.fxml
+++ b/MyShelfie/src/GUI/LoginScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="AnchorePane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@Application.css" fx:controller="GUI.LoginSceneController">
    <children>
       <Label id="TopLabel" layoutX="198.0" layoutY="43.0" text="Insert your username">
          <font>
