--- a/MyShelfie/src/GUI/LoginScene.fxml
+++ b/MyShelfie/src/GUI/LoginScene.fxml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@Application.css" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
    <children>
-      <Label id="TopLabel" layoutX="198.0" layoutY="43.0" text="Insert your username">
+      <Label id="TopLabel" layoutX="204.0" layoutY="46.0" text="Insert your username" styleClass="open-sans">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button id="LoginButton" layoutX="268.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchtoConnectionTypeScene" text="Login">
+      <Button id="LoginButton" layoutX="264.0" layoutY="279.0" mnemonicParsing="false" onAction="#switchToNextScene" text="Login">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <TextField fx:id="usernameText" layoutX="214.0" layoutY="151.0" promptText="username" />
+      <TextField fx:id="usernameText" layoutX="215.0" layoutY="151.0" promptText="username" styleClass="open-sans"/>
+      <Label fx:id="InfoLabel" layoutX="209.0" layoutY="208.0" styleClass="open-sans">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
