--- a/MyShelfie/src/GUI/ConnectionType.fxml
+++ b/MyShelfie/src/GUI/ConnectionType.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -7,21 +11,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ConnectionTypeController">
+<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ConnectionTypeController">
    <children>
-      <Label layoutX="145.0" layoutY="65.0" text="Choose the connection:" textFill="#fffafa" styleClass="open-sans">
+      <Label fx:id="ConnectionLabel" layoutX="24.0" layoutY="26.0" styleClass="open-sans" text="Choose the connection:" textFill="#fffafa">
          <font>
-            <Font size="28.0" />
+            <Font size="50.0" />
          </font>
       </Label>
-      <RadioButton layoutX="88.0" layoutY="210.0" mnemonicParsing="false" text="Socket" textFill="#fffdfd" styleClass="open-sans">
+      <RadioButton fx:id="ButtonSocket" layoutX="88.0" layoutY="210.0" mnemonicParsing="false" styleClass="open-sans" text="Socket" textFill="#fffdfd">
          <font>
-            <Font size="20.0" />
+            <Font size="22.0" />
          </font>
          <toggleGroup>
             <ToggleGroup fx:id="MatchTypeGroup" />
          </toggleGroup></RadioButton>
-      <RadioButton layoutX="385.0" layoutY="209.0" mnemonicParsing="false" text="RMI" textFill="#fffdfd" toggleGroup="$MatchTypeGroup" styleClass="open-sans">
+      <RadioButton fx:id="ButtonRMI" layoutX="385.0" layoutY="209.0" mnemonicParsing="false"  text="RMI" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
          <font>
             <Font size="22.0" />
          </font></RadioButton>
