--- a/MyShelfie/src/GUI/LoginScene.fxml
+++ b/MyShelfie/src/GUI/LoginScene.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
    <children>
-      <Label id="TopLabel" layoutX="204.0" layoutY="46.0" text="Insert your username" styleClass="open-sans">
+      <Label id="TopLabel" layoutX="109.0" layoutY="14.0" styleClass="open-sans" text="Insert your username" textFill="#f2eded">
          <font>
-            <Font size="22.0" />
+            <Font size="45.0" />
          </font>
       </Label>
       <Button id="LoginButton" layoutX="264.0" layoutY="279.0" mnemonicParsing="false" onAction="#switchToNextScene" text="Login">
@@ -18,7 +22,7 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <TextField fx:id="usernameText" layoutX="215.0" layoutY="151.0" promptText="username" styleClass="open-sans"/>
+      <TextField fx:id="usernameText" layoutX="210.0" layoutY="185.0" promptText="username" styleClass="open-sans" />
       <Label fx:id="InfoLabel" layoutX="209.0" layoutY="208.0" styleClass="open-sans">
          <font>
             <Font size="22.0" />
