--- a/MyShelfie/src/GUI/Application.css
+++ b/MyShelfie/src/GUI/Application.css
@@ -17,3 +17,8 @@
 .open-sans{
 
 }
+#EndSceneAnchor{
+    -fx-background-image: url("../../../MyShelfie/Resources/Publisher_material/Display_5.jpg");
+    -fx-background-size: cover;
+
+}
