--- a/MyShelfie/src/GUI/ConnectionType.fxml
+++ b/MyShelfie/src/GUI/ConnectionType.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -11,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ConnectionTypeController">
+<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ConnectionTypeController">
    <children>
       <Label fx:id="ConnectionLabel" layoutX="24.0" layoutY="26.0" styleClass="open-sans" text="Choose the connection:" textFill="#fffafa">
          <font>
@@ -25,7 +21,7 @@
          <toggleGroup>
             <ToggleGroup fx:id="MatchTypeGroup" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="ButtonRMI" layoutX="385.0" layoutY="209.0" mnemonicParsing="false"  text="RMI" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
+      <RadioButton fx:id="rButtonRMI" layoutX="385.0" layoutY="209.0" mnemonicParsing="false" text="RMI" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
          <font>
             <Font size="22.0" />
          </font></RadioButton>
