--- a/MyShelfie/src/GUI/MatchType.fxml
+++ b/MyShelfie/src/GUI/MatchType.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="MatchTypePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MatchTypeController">
+<AnchorPane fx:id="MatchTypePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" prefWidth="568.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MatchTypeController">
    <children>
       <Label layoutX="82.0" layoutY="59.0" text="No Game to join? Select match type: " textFill="#fffafa">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <RadioButton layoutX="53.0" layoutY="210.0" mnemonicParsing="false" text="2p" textFill="#fcfcfc">
+      <RadioButton fx:id="rButton2p" layoutX="53.0" layoutY="210.0" mnemonicParsing="false" text="2p" textFill="#fcfcfc">
          <toggleGroup>
             <ToggleGroup fx:id="MatchTypeGroup" />
          </toggleGroup>
@@ -20,11 +22,11 @@
             <Font size="20.0" />
          </font>
       </RadioButton>
-      <RadioButton layoutX="255.0" layoutY="210.0" mnemonicParsing="false" text="3p" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
+      <RadioButton fx:id="rButton3p" layoutX="255.0" layoutY="210.0" mnemonicParsing="false" text="3p" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
          <font>
             <Font size="20.0" />
          </font></RadioButton>
-      <RadioButton layoutX="431.0" layoutY="209.0" mnemonicParsing="false" text="4p" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
+      <RadioButton fx:id="rButton4p" layoutX="431.0" layoutY="209.0" mnemonicParsing="false" text="4p" textFill="#fffdfd" toggleGroup="$MatchTypeGroup">
          <font>
             <Font size="22.0" />
          </font></RadioButton>
