--- a/MyShelfie/src/GUI/GameScene.fxml
+++ b/MyShelfie/src/GUI/GameScene.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="GameAnchor" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GameSceneController">
    <children>
       <ImageView fx:id="BoardID" fitHeight="472.0" fitWidth="482.0" layoutX="18.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
