--- a/MyShelfie/src/GUI/LoginScene.fxml
+++ b/MyShelfie/src/GUI/LoginScene.fxml
@@ -4,22 +4,30 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TextArea?>
-<AnchorPane fx:id="LoginAnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
+<AnchorPane fx:id="LoginAnchorPane" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginSceneController">
    <children>
-      <Label id="TopLabel" layoutX="109.0" layoutY="14.0" styleClass="open-sans" text="Insert your username" textFill="#f2eded">
+      <Label id="TopLabel" layoutX="426.0" layoutY="207.0" styleClass="open-sans" text="Insert your username" textFill="WHITE">
          <font>
-            <Font size="45.0" />
+            <Font size="51.0" />
          </font>
       </Label>
-      <Button id="LoginButton" layoutX="264.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchToNextScene" text="Login">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <TextField fx:id="usernameText" layoutX="215.0" layoutY="187.0" promptText="username" style="-fx-background-color: white;" styleClass="open-sans" />
-      <TextArea fx:id="messageTextArea" wrapText="true" editable="false" layoutX="111.0" layoutY="236.0" prefHeight="28.0" prefWidth="361.0"/>
+      <Pane layoutX="426.0" layoutY="265.0" prefHeight="347.0" prefWidth="446.0">
+         <children>
+            <Button id="LoginButton" layoutX="197.0" layoutY="232.0" mnemonicParsing="false" onAction="#switchToNextScene" text="Login">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <TextField fx:id="usernameText" layoutX="147.0" layoutY="106.0" promptText="username" style="-fx-background-color: white;" styleClass="open-sans" />
+            <Label fx:id="messageTextArea" alignment="CENTER" layoutX="54.0" layoutY="136.0" prefHeight="30.0" prefWidth="337.0" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
