--- a/src/main/resources/ConnectionType.fxml
+++ b/src/main/resources/ConnectionType.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="865.0" prefWidth="1298.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.it.polimi.ingsw.GUI.ConnectionTypeController">
+<AnchorPane fx:id="ConnectionType" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="865.0" prefWidth="1298.0" stylesheets="/Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.it.polimi.ingsw.GUI.ConnectionTypeController">
    <Pane layoutX="452.0" prefHeight="871.0" prefWidth="849.0">
       <children>
             <ImageView fitHeight="865.0" fitWidth="1298.0" pickOnBounds="true" preserveRatio="true" translateX="-250.0">
