--- a/src/main/resources/EndGameScene.fxml
+++ b/src/main/resources/EndGameScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="EndSceneAnchor" prefHeight="400.0" prefWidth="600.0" stylesheets="@Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.it.polimi.ingsw.GUI.EndGameController">
+<AnchorPane fx:id="EndSceneAnchor" prefHeight="400.0" prefWidth="600.0" stylesheets="/Application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.it.polimi.ingsw.GUI.EndGameController">
    <children>
       <GridPane fx:id="gridLeaderboard" alignment="CENTER" gridLinesVisible="true" layoutX="38.0" layoutY="139.0" prefHeight="222.0" prefWidth="530.0" style="-fx-background-color: white;">
         <columnConstraints>
